--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,23 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "module": "commonjs",
-    "sourceMap": true,
-    "jsx": "react"
+    "outDir": "lib/esm",
+    "module": "esnext",
+    "target": "es5",
+    "lib": ["es6", "dom", "es2016", "es2017"],
+    "jsx": "react",
+    "declaration": true,
+    "moduleResolution": "node",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "esModuleInterop": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "allowSyntheticDefaultImports": true,
   },
-  "files": ["globals.ts", "utils.ts", "index.tsx"],
+  "include": ["src"],
+  "exclude": ["node_modules", "lib"],
+  "esModuleInterop": true
 }
