--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React hook for using exportable csv in convenient way",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
-  "types": "./lib/esm/index.d.ts",
+  "types": "./index.d.ts",
   "scripts": {
     "build": "npm run build:esm && npm run build:cjs",
     "build:esm": "tsc",
@@ -13,6 +13,7 @@
     "test:watch": "jest --watch"
   },
   "files": [
+    "index.d.ts",
     "/lib"
   ],
   "keywords": [
@@ -28,14 +29,14 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/react": "^17.0.20",
     "jest": "^27.1.1",
-    "react": "^16.14.0",
+    "react": "^17.0.2",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
   },
