--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
